# rypper

./: .domains  .gitignore  .rustfmt.toml  .woodpecker.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  cliff.toml  clippy.toml  justfile  rustfmt.toml
.woodpecker/: .build.yml  .docs.yml  .publish.yml  .release.yml  .test.yml  ci.yml
dev/: 404.html  ARCHITECTURE.html  CONFIGURATION.html  DEVGUIDE.html  DOS_AND_DONTS.html  FAQ.html  INSTALLATION.html  INTRODUCTION.html  LIBRARIES.html  index.html  print.html  searchindex.js  searchindex.json
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  book.toml  justfile
docs/src/: ARCHITECTURE.md  DEVGUIDE.md  DOS_AND_DONTS.md  INSTALLATION.md  INTRODUCTION.md  LIBRARIES.md  SUMMARY.md  chapter_1.md
rypper/: Cargo.toml
rypper-cli/: Cargo.toml
rypper-cli/src/: lib.rs
rypper-core/: Cargo.toml
rypper-core/src/: consts.rs
rypper-gui/: Cargo.toml
rypper-reader/: Cargo.toml
rypper-reader/examples/: read_repomd.rs
rypper-reader/samples/: another_home_uncomfyhalomacro.repo  home_uncomfyhalomacro.repo  invalid_baseurl.repo  invalid_gpgkey_url.repo  no_baseurl.repo  only_section_and_baseurl.repo  valid-metalink3-file.xml  valid-metalink4-file.xml  valid-repomd-file.xml
rypper-reader/src/: lib.rs  metalink.rs  repoconfig.rs  repomd.rs
rypper-reader/src/metalink/: meta3.rs  meta4.rs  mod.rs
rypper-tui/: Cargo.toml
rypper-tui/src/: lib.rs
rypper-utils/: Cargo.toml
rypper-utils/src/: fetch.rs
rypper-utils/src/fetch/: metadata.rs  mod.rs
