[package]
name = "rypper"
version = "0.1.0-alpha.4"
edition = "2021"
authors = [ "Soc Virnyl Estela <socvirnyl.estela@gmail.com>" ]
documentation = "https://uncomfyhalomacro.codeberg.page/rypper"
description = "An alternative package manager for openSUSE"
homepage = "https://codeberg.org/uncomfyhalomacro/rypper"
repository = "https://codeberg.org/uncomfyhalomacro/rypper"
license = "MPL-2.0"
keywords = [ "package-manager", "opensuse", "zypper", "rpm" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rypper-core",
  "rypper-cli",
  "rypper-utils",
  "rypper-reader",
  "rypper-tui"
]

default-members = [
  "rypper-core",
  "rypper-cli",
  "rypper-utils",
  "rypper-reader",
  "rypper-tui"
]

[profile.release]
lto = true          # Enable Link Time Optimization.
debug = true        # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8   # Default. Little gains if set to 1 so why bother?
panic = 'abort'     # Abort on panic.
strip = false       # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true

