[workspace]
members = [
  "rypper",
  "rypper-cli",
  "rypper-core",
  "rypper-gui",
  "rypper-reader",
  "rypper-tui",
  "rypper-utils"
]

default-members = [
  "rypper",
  "rypper-cli",
  "rypper-core",
  "rypper-gui",
  "rypper-reader",
  "rypper-tui",
  "rypper-utils"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
        "Soc Virnyl Estela <socvirnyl.estela@gmail.com>"
]
rust-version = "1.71"
edition = "2021"
license = "MPL-2.0"
homepage = "https://codeberg.org/uncomfyhalomacro/rypper"
repository = "https://codeberg.org/uncomfyhalomacro/rypper"

[profile.release]
lto = true          # Enable Link Time Optimization.
debug = true        # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8   # Default. Little gains if set to 1 so why bother?
panic = 'abort'     # Abort on panic.
strip = false       # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true

