[package]
name = "rypper-reader"
version = "0.1.0-alpha.4"
edition = "2021"
authors = [ "Soc Virnyl Estela <socvirnyl.estela@gmail.com>" ]
description = "An alternative package manager for openSUSE"
homepage = "https://codeberg.org/uncomfyhalomacro/rypper"
repository = "https://codeberg.org/uncomfyhalomacro/rypper"
license = "MPL-2.0"
keywords = [ "package-manager", "opensuse", "zypper", "rpm" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.29"
rust-ini = "0.19"
sequoia-openpgp = "1.16"
url = { version = "2.4", features = ["serde"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

