[package]
name = "rypper-utils"
version = "0.1.0"
edition = "2021"
authors = [ "Soc Virnyl Estela <socvirnyl.estela@gmail.com>" ]
description = "An alternative package manager for openSUSE"
homepage = "https://codeberg.org/uncomfyhalomacro/rypper"
repository = "https://codeberg.org/uncomfyhalomacro/rypper"
license = "MPL-2.0"
keywords = [ "package-manager", "opensuse", "zypper", "rpm" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rypper_utils"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
